# chatterd

./: .gitignore  AGENTS.md  Cargo.toml  README.md  gui_plans.md
docs/: chatterctl.md  chattergtk.md  jsonrpc.md
src/: config.rs  events.rs  main.rs  matrix.rs  rpc.rs  state.rs
tools/: chattergtk.py
